# RTv1_windows

./: .gitignore  CMakeLists.txt  Makefile  README.md  RTv1  RTv1.code-workspace  install.sh  plane.rt  red.rt  scene.rt  test.sh
.oldvscode/: launch.json  tasks.json  tsconfig.json
Pars/: CMakeLists.txt  get_next_line.c  get_next_line.h  main.c  rtv.h  test
Pars/libft/: Makefile  ft_bzero.c  ft_isdigit.c  ft_itoa.c  ft_memalloc.c  ft_memdel.c  ft_strcpy.c  ft_strdup.c  ft_strjoin.c  ft_strnew.c  ft_strsplit.c  ft_strsub.c  ft_vector.c
RTv1.dSYM/Contents/Resources/DWARF/: RTv1
RTv1_vsc.dSYM/Contents/: Info.plist
RTv1_vsc.dSYM/Contents/Resources/DWARF/: RTv1_vsc
SDL/lib/: libSDL2-2.0.0.dylib  libSDL2.la  libSDL2_image-2.0.0.dylib  libSDL2_image.la  libSDL2_test.la  libSDL2main.la
SDL/lib/cmake/SDL2/: sdl2-config.cmake
SDL/lib/pkgconfig/: SDL2_image.pc  sdl2.pc
SDL2-2.0.12/: Makefile  Makefile.rules  config.status  libtool  sdl2-config  sdl2-config.cmake  sdl2.pc
SDL2-2.0.12/include/: SDL_config.h
SDL2_image-2.0.5/: Makefile  SDL2_image.pc  config.status  libSDL2_image.la  libtool  showimage
SDL2_image-2.0.5/.deps/: IMG.Plo  IMG_ImageIO.Plo  IMG_bmp.Plo  IMG_gif.Plo  IMG_jpg.Plo  IMG_lbm.Plo  IMG_pcx.Plo  IMG_png.Plo  IMG_pnm.Plo  IMG_svg.Plo  IMG_tga.Plo  IMG_tif.Plo  IMG_webp.Plo  IMG_xcf.Plo  IMG_xpm.Plo  IMG_xv.Plo  showimage.Po
SDL2_image-2.0.5/.libs/: libSDL2_image-2.0.0.dylib  libSDL2_image-2.0.so.0.2.3  libSDL2_image.lai  showimage
SDL2_image-2.0.5/.libs/libSDL2_image-2.0.0.dylib.dSYM/Contents/Resources/DWARF/: libSDL2_image-2.0.0.dylib
a.out.dSYM/Contents/Resources/DWARF/: a.out
gnl/: get_next_line.c  get_next_line.d  get_next_line.h
include/: RTv1.h  primitives.h  rtv.h
libft/: Makefile  ft_atoi.c  ft_atoi_base.c  ft_memccpy.c  ft_putendl_fd.c  ft_rgb_to_int.c  ft_strlen.c  ft_vector.c  ft_vector2.c  libft.h
mlsdl/: Makefile  mlsdl.h  mlsdl_close_window.c  mlsdl_event_listening.c  mlsdl_get_data_addr.c  mlsdl_init.c  mlsdl_key_press.c  mlsdl_loop.c  mlsdl_new_rend.c  mlsdl_new_surface.c  mlsdl_new_texture.c  mlsdl_new_window.c  mlsdl_put_texture_to_render.c  mlsdl_update_texture.c
skale_src/: ft_all_objects.c  ft_calc.c  ft_draw_scene.c  ft_intersect_figures.c  ft_light_calc.c  ft_parce_scene.c  ft_pars_in_details.c  rtv.c
src/: RTv1.c  RTv1.d  RTv1_test.c  ft_all_objects.c  ft_atof.c  ft_atof.old.c  ft_calc.c  ft_draw_scene.c  ft_draw_scene.d  ft_init_window.c  ft_init_window.d  ft_intersect_figures.c  ft_intersect_figures.d  ft_light_calc.c  ft_light_calc.d  ft_parce_scene.c  ft_pars_in_details.c  ft_rotate_cam.c  ft_set_scene.c  ft_set_scene.d  rtv.c
